force-app/main/default/objects/WebsiteListingEmailToFriend__c/WebsiteListingEmailToFriend__c.object-meta.xml
<CustomObject>
    <label>Website Share</label>
    <nameField>
        <label>Website Share</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>