force-app/main/default/objects/WebsiteListingEmailToFriend__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Website Shares</relationshipLabel>
    <relationshipName>Website_Listing_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>