force-app/main/default/objects/WebsiteListingEmailToFriend__c/fields/ExternalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreatedDate__c</fullName>
    <label>Date Created on Website</label>
    <type>DateTime</type>
</CustomField>