force-app/main/default/objects/WebsiteListingEmailToFriend__c/fields/ToName__c.field-meta.xml
<CustomField>
    <fullName>ToName__c</fullName>
    <label>To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>